<resources>
    <string name="app_name">Basket Buddy</string>
    <string name="title_activity_item_edit">itemEditActivity</string>
    <!-- #4 itemEdit Activity -->
    <string name="itemOutputMessage">Edit your item</string>
    <string name="itemEditName">Name: </string>
    <string name="itemEditQuantity">Quantity: </string>
    <string name="itemEditAisle">Aisle: </string>
    <string name="editBtn">Edit</string>
    <string name="doneBtn">Done</string>
    <string name="storeTitle">Store Title Goes Here</string>
    <string name="item1">Bananas [4]</string>
    <string name="myTripsBtn">My Trips</string>
    <string name="newTripBtn">New Trip</string>
    <string name="viewSpendBtn">View Spending</string>
    <!-- #3 EditStore / single stop screen -->
    <string name="storeAddressLabel">Address: </string>
    <string name="storeHoursLabel">Store Hours: </string>
    <string name="storeNameLabel">Store Name: </string>
    <string name="storeTitleLabel">New Store</string>
    <string name="createNewItemBtn">Add Item</string>
    <!-- #7 receipt Activity -->
    <string name="receiptOutputMessage">How much did you spend?</string>
    <string name="moneySymbol">$</string>
    <!-- #8 tripSummary Activity -->
    <string name="tripSummaryMessage">Trip Summary</string>
    <string name="tripSummaryTotal">Total: $666</string>
    <string name="tripSummaryOKBtn">OK</string>
    <!-- #10 avgSpending Activity -->
    <string name="avgSpendingMessage">Average Spending:</string>
    <string name="avgSpendingTotal">$666</string>
    <string name="avgSpendingRange">For x trips in y weeks</string>
    <string name="avgSpendingBackBtn">Back</string>
</resources>
