<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.fisli.basketbuddy.AvgSpending">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avgSpendingMessage"
        android:id="@+id/avgSpendingMessage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avgSpendingTotal"
        android:id="@+id/avgSpendingTotal"
        android:layout_above="@+id/avgSpendingRange"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:textStyle="normal|bold"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avgSpendingBackBtn"
        android:id="@+id/avgSpendingBackBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="backToHome"
        android:background="@color/color_purple"
        android:textColor="@android:color/background_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/avgSpendingRange"
        android:id="@+id/avgSpendingRange"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />
</RelativeLayout>
