<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".Home">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="80dp"
        android:text="@string/newTripBtn"
        android:id="@+id/newTrip"
        android:onClick="startNewTrip"
        android:layout_above="@+id/myTrips"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:background="@color/color_purple"
        android:textSize="18sp"
        android:textColor="@android:color/background_light" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="80dp"
        android:text="@string/viewSpendBtn"
        android:id="@+id/spending"
        android:onClick="startAvgSpending"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/myTrips"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/color_purple"
        android:textSize="18sp"
        android:textColor="@android:color/background_light" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="80dp"
        android:text="@string/myTripsBtn"
        android:id="@+id/myTrips"
        android:onClick="startMyTrips"
        android:background="@color/color_purple"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
